# course-questions-gen

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt  settings.ini
prompts/content_expert/: create_topic_experts.md  generate_question.md
prompts/shared/: question_format.md  question_template.csv
scripts/: visualize_graph.py
src/course_questions_gen/: __init__.py  graph.py  graph_app.py  prompts.py  terminal_feedback.py  utils.py
tests/: test_full_graph_regression.py  test_graph.py  test_prompts.py  test_terminal_feedback.py  test_utils.py  utils.py
tests/data/: topics.csv
tests/data/prompts/content_expert/: create_topic_experts.md  generate_question.md
tests/data/prompts/shared/: question_format.md
