[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "course-questions-gen"
version = "0.1.0"
description = "LangGraph scaffold for course question generation."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.6.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0.0",
    "ipython>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
